src/index.scss
@font-face {
  font-family: "PxSans";
  src: url("/static/fonts/px_sans_nouveaux.ttf");
}

@font-face {
  font-family: "SF Alien Encounters";
  src: url("/static/fonts/SFAlienEncounters.ttf");
}


// General

div, span, body {
  padding: 0;
  margin: 0;
}

body {
  background: black;
  color: white;
  height: 100vh;
}

a {
  color: white;
}

img {
  display: block;
}

h4 {
  margin: 5px;
}

.error {
  color: red !important;
}

.selected {
  font-weight: bold;
}

.text-lg {
  font-size: 70px;
}

.text-md {
  font-size: 30px;
}

.text-sm {
  font-size: 18px;
}

.hidden {
  display: none;
}

.text-center {
  text-align: center;
}

.text-left {
  text-align: left;
}

.m-5 {
  margin: 5px;
}

.w-375 {
  width: 375px;
}

.mw-700 {
  max-width: 700px;
}

.w-500 {
  width: 500px;
}

.w-200 {
  width: 200px;
}

.f-px-sans {
  font-family: PxSans, serif;
}

// Navbar

.navbar {
  line-height: 1;
  font-size: 30px;

  .navbar-img {
	background: url("/static/img/glitch-5.png") center;
	background-size: cover;
	min-height: 60px;
  }

  .navbar-title {
    font-family: "SF Alien Encounters";
    text-align: center;
    text-decoration: none !important;

    div {
      margin: 8px 5px 5px;
    }
  }

  .navbar-content {
    display: flex;
    flex-wrap: wrap;
    max-width: 700px;
    margin-left: auto;
    margin-right: auto;
    background-color: black;
	//padding-left: 10px;
	//padding-right: 10px;
    border-top: solid 0.5px rgba(255, 255, 255, 0.7);
    border-bottom: solid 0.5px rgba(255, 255, 255, 0.7);
    @media screen and (min-width: 500px) {
      border: solid 0.5px rgba(255, 255, 255, 0.7);
    }
    button {
      padding: 4px 25px;
      margin: 10px;
    }
  }

  .navbar-item {
	vertical-align: center;
	font-size: 18px;
	display: inline-block;
    margin: 15px;
  }

  .navbar-username {
    margin: 10px;
    @media all and (max-width: 500px) {
      display: none;
    }
  }

  .navbar-placeholder {
    flex: 1;
  }
}

// Login

.login-button {
  padding: 9px 45px;
  font-size: 10px;
}

.login-btn-sm {
  padding: 6px 30px;
  font-size: 10px;
}

// Inputs & Buttons

textarea, select, input, button { outline: none; }

button, input, textarea {
  border-radius: 0;
  padding: 5px;
  margin: 5px;
  font-family: PxSans, serif;
  font-size: 10px;
}

button {
  padding: 6px 30px;
  border: 2px solid #a6a6a6;
  border-right-color: #444;
  border-bottom-color: #444;
  background-color: #bfbfbf;

  &:active {
	border: 2px solid #a6a6a6;
	border-left-color: #444;
	border-top-color: #444;
  }
}

input, textarea {
  border: 2px solid #a6a6a6;
  border-left-color: #444;
  border-top-color: #444;
}

input {
  min-width: 200px;
}

textarea {
  resize: none;
}


// List

.fixed-content {
  position: absolute;
  bottom: 20px;
  top: calc(6.25vw + 60px);
  left: calc((100vw - 500px) / 2);
  right: calc((100vw - 500px) / 2);
  border: solid 2px #bfbfbf;
  @media only screen and (max-width: 600px) {
    top: 100px;
    left: 0;
    right: 0;
    bottom: 0;
  }
}

.scroll-container {
  overflow-y: scroll;
  background-color: white;
  color: black;
  border: 2px solid #a6a6a6;
  border-left-color: #444;
  border-top-color: #444;
  height: calc(100% - 40px - 4px);

  &::-webkit-scrollbar {
	width:  20px;
	height: 20px;
  }

  &::-webkit-scrollbar-thumb {
	border: 1px solid rgb(60, 60, 60);
	background-color: #bfbfbf;
  }

  &::-webkit-scrollbar-track {
	background: url("/static/img/check.png") repeat;
  }
}

.scroll-container-messages {
  height: calc(100% - (3 * 40px) - 4px);
}

.list {
  font-family: PxSans, serif;
  font-size: 10px;
  color: black;
  height: 100%;
  max-width: calc(100vw - 10px);


  .list-item, .list-header, .list-placeholder {
	display: flex;
	align-items: center;
	height: 40px;
	padding-left: 5px;
	padding-right: 5px;
	color: black;
  }

  .list-header {
	font-size: 10px;
	font-weight: bold;
	background-color: #bfbfbf;
	justify-content: space-between;
    margin-bottom: 5px;

    span {
	  margin-left: 5px;
	}

	input {
	  margin-right: 0;
	  width: 100px;
	}
  }

  .list-footer {
	@extend .list-header;
	height: 80px;
	padding: 0;
    margin-bottom: 0;

	button, textarea {
	  margin: 0;
      height: 60px;
	}

	textarea {
      height: 46px;
	  flex-grow: 2;
      margin-right: 5px;
    }
  }

  .list-button:hover {
	background-color: rgb(0,0,128);
	color: white;
	a, button, .disabled {
	  color: white;
	}
  }

  .list-placeholder {
	justify-content: center;
	font-style: italic;
	color: #bfbfbf;
    text-align: center;
    padding: 5px 40px;
  }
}

.list-message {
  display: flex;
  justify-items: flex-start;
  align-items: flex-start;
  overflow-wrap:break-word;
  margin: 10px;
}

.message-sender, .message-content {
  font-family: "Times", sans-serif;
  font-size: 16px;
}

.message-content {
  flex-shrink: 1 !important;
  overflow-wrap: break-word;
  min-width: 0;

  a {
    color: rgb(0, 0, 255);
  }
}

.message-sender {
  font-weight: bold;
  text-decoration: underline;
  color: rgb(0,0,255);
  padding-right: 5px;
}

.current-user {
  color: red;
}

// Login

form {
  .text-md, button {
	margin-top: 20px;
	margin-bottom: 20px;
  }
}

.msg-label {
  margin: 10px;
}

.login-body {
  border: solid white 2px;
  text-align: center;
}

.input-label {
  margin: 15px 5px 0;
}

// Index

.main-content {
  border: solid white 2px;
  margin: 20px 10px;
  padding: 10px;
  background: black;

  h3, p {
	margin: 10px;
  }

  img {
	border-top: solid 2px white;
    max-width: 99vw;
  }

  @supports (-webkit-touch-callout: none) {
    margin-bottom: 100px;
  }

  }

.small-content {
  border: solid white 2px;
  margin: 5px 10px;
}

// Footer

.footer {
  color: #7f7f7f;
  font-size: 14px;
  text-align: center;
  margin-top: 40px;
  margin-bottom: 20px;
}

th span {
  margin-left: 5px;
}

th {
  text-align: right;
}

table {
  width: 100%;
}

// Chat

.flex {
  width: 100%;
  display: flex;
  align-content: center;
  align-self: center;
  justify-content: center;
  flex-grow: 1;
  overflow: auto;
}

.legacy-box {
  padding: 5px;
  background-color: #bfbfbf;
  border: 2px solid #a6a6a6;
  border-bottom-color: #444;
  border-right-color: #444;
  margin: 20px 10px;
  color: black;
  font-family: PxSans, serif;
}

.legacy-no-borders-sm {
  @media screen and (max-width: 500px) {
    border: none;
    margin: 0;
  }
}

body > div {
  height: 100%;
}

body > div > div {
  height: 100%;
  display: flex;
  flex-flow: column;
}

.flex-row {
  display: flex;
  justify-content: center;
  width: 100%;

  input {
    flex-grow: 1;
  }
}

.flex-col {
  display: flex;
  flex-flow: column;
}

.flex-grow-1 {
  flex-grow: 1;
}

.flex-grow-0 {
  flex-grow: 0;
}

.bar-button {
  padding: 3px 15px;
}

.p-b-10 {
  //TODO: Remove this. Replace List CSS with Flexboxes
  padding-bottom: 10px;
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
}

.flex-center {
  justify-content: center;
}

.flex-end {
  justify-content: flex-end;
}

.flex-start {
  justify-content: flex-start;
}

.modal {
  .legacy-box {
    padding: 0;
  }

  p {
    font-size: 10px;
  }

  button, input, p {
    margin: 10px;
  }
}

.title-bar {
  height: 30px;
  background: linear-gradient(90deg, #0007ff, #c70aff);
}

.divider {
  height: 1px;
  background: #a6a6a6;
}

.hide-sm {
  @media screen and (max-width: 800px) {
    display: none;
  }
}

.token {
  overflow-wrap: break-word;
}

.h-100 {
  height: 100%;
}

.welcome-button {
  flex-grow: 1;
  padding: 5px 20px;
  button {
    width: 100%;
    font-size: 12px;
  }
}

.welcome-button-group {
  margin-bottom: 10px;
  margin-top: 10px;
}

.hint-label {
  margin: 0 10px 10px !important;
  font-size: 14px;
}

.chat-container {
  display: flex;
  flex-direction: column-reverse;

  * {
    flex-shrink: 0;
  }

  ul, ol {
    margin: 0;
  }
}

.disabled {
  color: #7f7f7f;
}

button.link {
  background: none !important;
  border: none;
  padding: 0 !important;
  /*input has OS specific font-family*/
  text-decoration: underline;
  cursor: pointer;
}

.background-image {
  background: url("/static/img/grid.jpg") center bottom;
  background-size: contain;
  background-repeat: no-repeat;
  position: absolute;
  top: 15px;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  min-width: 700px;

  width: 100%;
  z-index: -1;

  @media (min-aspect-ratio: 16/9) {
    background-size: cover;
    background-position: top;
  }
}

